
- Added IndexManager as a singleton (will replace XiborManager--already
  obsoleted in library code.)

- Added DayCounter parameter to ParCoupon (to be used for accruing spreads
  and past fixings.) When missing, it defaults to that of the term structure.

- Added compilation flag to select default floating-coupon type

- Added Faure low-discrepancy sequence; tests provided

- Added randomized (shifted) low discrepancy sequences that will be used for
  randomized quasi Monte Carlo

- Added SeedGenerator class, for random generation of seeds when they are not
  given by the user.

- Added the implementation of Sobol sequences using the coefficients
  of the free direction integers as provided by Bratley and Fox, who
  credited unpublished work of Sobol' and Levitan.

- Added an implementation of Sobol sequences using the coefficients of
  the free direction integers of Lemieux, Cieslak, and
  Luttmer. Coefficients for d<=40 are the same as in Bradley-Fox. For
  dimension 40<d<=360 the coefficients have been calculated as optimal
  values based on the "resolution" criterion. The values has been
  provided by Christiane Lemieux, private communication, September
  2004.

- Average-price Asian pricers have been deprecated. New equivalent pricing
  engines added.

- Global evaluation date added through Settings class.  Used for
  index-fixing and exchange-rate lookup.

- TermStructure renamed to YieldTermStructure (the former name was
  deprecated)

- New base class BaseTermStructure which can calculate its reference
  date based on the global evaluation date.
  YieldTermStructure, BlackVolTermStructure, LocalVolTermStructure,
  CapFlatVolatilityStructure, CapletForwardVolatilityStructure, and
  SwaptionVolatilityStructure are now derived from BaseTermStructure
  so that they inherit its functionality.

- PathGenerator now works correctly with processes describing S
  instead of log S. Geometric Brownian process added (thanks to Walter
  Penschke.)
